fix: overflow x

--- a/src/app/pages/definition-page/definition-page.component.css
+++ b/src/app/pages/definition-page/definition-page.component.css
@@ -9,7 +9,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%;
+  width: 90%;
   height: 90%;
   background-color: rgba(217, 216, 216, 0.5);
   z-index: 2;
